HAWQ-1084. Fixed memory allocation for table printing.